--- a/index.html
+++ b/index.html
@@ -21,23 +21,31 @@
 		<p>Hello, my name is</p>
 
 		<div class="content">
-			<h1>Henrik Lau Eriksson!</h1>
+			<h1>Henrik Lau Eriksson</h1>
 
 			<div class="section">
-				<p>I work as a developer at <a href="https://valtech.se">Valtech</a>, live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, spend my holidays in <a href="http://goo.gl/maps/D8XX9">Hong Kong</a>.</p>
+				<p>I live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, <a href="https://sweden.se">Sweden</a>, and I work as a developer at <a href="https://valtech.se">Valtech</a></p>
 
-				<p>You can contact me via <span>henrik.lau.eriksson at gmail dot com</span></p>
+				<p>You can contact me via <a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a> or <a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a>, encrypt via <a href="https://keybase.io/hlaueriksson">Keybase</a></p>
+			</div>
+
+			<figure>
+				<img src="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=160" alt="Henrik Lau Eriksson" />
+			</figure>
+
+			<div class="section">
+				<p>I blog over at <a href="http://conductofcode.io">Conduct of Code</a></p>
+
 				<p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
-				<p>You can find me on
-					<a href="https://www.linkedin.com/in/henriklaueriksson">LinkedIn</a>,
-					<a href="https://www.facebook.com/henrik.laueriksson">Facebook</a> or
+
+				<p>You can find my profile on <a href="https://www.linkedin.com/in/henriklaueriksson">LinkedIn</a></p>
+			</div>
+
+			<div class="section">
+				<!-- These aren't the profiles you're looking for;
+					<a href="https://www.facebook.com/henrik.laueriksson">Facebook</a>
 					<a href="https://google.com/+HenrikLauEriksson">Google+</a>
-				</p>
-				
-				<!-- You can try to find me on
-					<a href="https://twitter.com/hlaueriksson">Twitter</a>
 					<a href="http://instagram.com/hlaueriksson">Instagram</a>
-					<a href="http://www.pinterest.com/hlaueriksson">Pinterest</a>					
 				-->
 			</div>
 		</div>
