--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Henrik Lau Eriksson</h1>
 
 			<div class="section">
-				<p>I live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, <a href="https://sweden.se">Sweden</a>, and I work as a developer at <a href="https://valtech.se">Valtech</a></p>
+				<p>I live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, <a href="https://sweden.se">Sweden</a>, and I work as a developer at <a href="https://www.movestic.se">Movestic</a></p>
 
 				<p>You can contact me via <a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a> or <a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a>, encrypt via <a href="https://keybase.io/hlaueriksson">Keybase</a></p>
 			</div>
@@ -34,7 +34,7 @@
 			</figure>
 
 			<div class="section">
-				<p>I blog over at <a href="http://conductofcode.io">Conduct of Code</a></p>
+				<p>I just started blogging over at <a href="http://conductofcode.io">Conduct of Code</a></p>
 
 				<p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
 
