--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+<!--
+╦ ╦┌─┐┌┐┌┬─┐┬┬┌─  ╦  ┌─┐┬ ┬  ╔═╗┬─┐┬┬┌─┌─┐┌─┐┌─┐┌┐┌
+╠═╣├┤ │││├┬┘│├┴┐  ║  ├─┤│ │  ║╣ ├┬┘│├┴┐└─┐└─┐│ ││││
+╩ ╩└─┘┘└┘┴└─┴┴ ┴  ╩═╝┴ ┴└─┘  ╚═╝┴└─┴┴ ┴└─┘└─┘└─┘┘└┘
+                                       was here -->
 	<head>
 		<title>Henrik Lau Eriksson</title>
-		<link rel="icon" type="image/png" href="favicon.png" />
+		<link rel="icon" sizes="192x192" href="icon.png">
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta charset="UTF-8" />
+		<meta name="theme-color" content="#dcdcdc">
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,7 +40,7 @@
 			</figure>
 
 			<div class="section">
-				<p>I just started blogging over at <a href="http://conductofcode.io">Conduct of Code</a></p>
+				<p>I blog over at <a href="http://conductofcode.io">Conduct of Code</a></p>
 
 				<p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
 
