--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 ╩ ╩└─┘┘└┘┴└─┴┴ ┴  ╩═╝┴ ┴└─┘  ╚═╝┴└─┴┴ ┴└─┘└─┘└─┘┘└┘
                                        was here -->
 	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>Henrik Lau Eriksson</title>
+		<meta name="description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here">
+
 		<link rel="icon" sizes="192x192" href="icon.png">
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		<meta charset="UTF-8" />
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 		<meta name="theme-color" content="#dcdcdc">
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
