--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 
 		<meta name="theme-color" content="#dcdcdc">
 
+		<!-- http://ogp.me/ -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="http://henrik.laueriksson.com" />
+		<meta property="og:title" content="Henrik Lau Eriksson" />
+		<meta property="og:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
+		<meta property="og:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
+		<meta property="og:image:secure_url" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="700" />
+		<meta property="og:image:height" content="700" />
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
