--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 		<meta property="og:image:width" content="700" />
 		<meta property="og:image:height" content="700" />
 
+		<!-- https://dev.twitter.com/cards/overview -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@hlaueriksson" />
+		<meta name="twitter:creator" content="@hlaueriksson" />
+		<meta name="twitter:title" content="Henrik Lau Eriksson" />
+		<meta name="twitter:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
+		<meta name="twitter:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
