--- a/index.html
+++ b/index.html
@@ -38,6 +38,38 @@
 		<meta name="twitter:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
 		<meta name="twitter:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
 
+		<!-- http://schema.org/ -->
+		<script type="application/ld+json">
+		{
+			"@context": "http://schema.org",
+			"@type": "Blog",
+			"@id": "http://henrik.laueriksson.com",
+			"url": "http://henrik.laueriksson.com",
+			"headline": "Henrik Lau Eriksson",
+			"description": "Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here",
+			"image": {
+				"@type": "ImageObject",
+				"url": "https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700",
+				"height": 700,
+				"width": 700
+			},
+			"author": {
+				"@type": "Person",
+				"name": "Henrik Lau Eriksson"
+			},
+			"publisher": {
+				"@type": "Organization",
+				"name": "Henrik Lau Eriksson",
+				"logo": {
+					"@type": "ImageObject",
+					"url": "https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=60",
+					"width": 60,
+					"height": 60
+				}
+			}
+		}
+		</script>
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
