updated og image

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 		<meta property="og:url" content="http://henrik.laueriksson.com" />
 		<meta property="og:title" content="Henrik Lau Eriksson" />
 		<meta property="og:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
-		<meta property="og:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
-		<meta property="og:image:secure_url" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
+		<meta property="og:image" content="http://henrik.laueriksson.com/og.jpeg" />
 		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:width" content="700" />
-		<meta property="og:image:height" content="700" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="840" />
 
 		<!-- https://dev.twitter.com/cards/overview -->
 		<meta name="twitter:card" content="summary" />
