--- a/cv/index.html
+++ b/cv/index.html
@@ -6,10 +6,10 @@
   <base href="/cv/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" sizes="192x192" href="icon.png">
   
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.b52d2076048963e7cbfd.bundle.js"></script><script type="text/javascript" src="main.645377b6b3220d1e1e8e.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.62a63e5b49552abeb0ff.bundle.js"></script><script type="text/javascript" src="main.da05d87bbc32145691cb.bundle.js"></script></body>
 </html>
