added links to cv and latest

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 			</div>
 
 			<div class="section">
+				<p><a href="/cv/">cv</a> | <a href="/latest/">latest</a></p>
+			</div>
+
+			<div class="section">
 				<!-- These aren't the profiles you're looking for;
 					<a href="https://www.facebook.com/henrik.laueriksson">Facebook</a>
 					<a href="https://google.com/+HenrikLauEriksson">Google+</a>
