--- a/cv/index.html
+++ b/cv/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="sv-se">
 <head>
   <meta charset="utf-8">
   <title>CV</title>
@@ -18,8 +18,8 @@
     ga('send', 'pageview');
 
   </script>
-</head>
+<link href="styles.cd5b9c3736057130e8e1.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.62a63e5b49552abeb0ff.bundle.js"></script><script type="text/javascript" src="main.ece65f0eac3cb123ea53.bundle.js"></script></body>
+<script type="text/javascript" src="inline.50bc7ae15b89d793bb1b.bundle.js"></script><script type="text/javascript" src="polyfills.07685bca73161be59257.bundle.js"></script><script type="text/javascript" src="vendor.58ec3b3aa5018ef85bdf.bundle.js"></script><script type="text/javascript" src="main.c5b05f790f8817f80e9e.bundle.js"></script></body>
 </html>
