--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
-<!--
-╦ ╦┌─┐┌┐┌┬─┐┬┬┌─  ╦  ┌─┐┬ ┬  ╔═╗┬─┐┬┬┌─┌─┐┌─┐┌─┐┌┐┌
-╠═╣├┤ │││├┬┘│├┴┐  ║  ├─┤│ │  ║╣ ├┬┘│├┴┐└─┐└─┐│ ││││
-╩ ╩└─┘┘└┘┴└─┴┴ ┴  ╩═╝┴ ┴└─┘  ╚═╝┴└─┴┴ ┴└─┘└─┘└─┘┘└┘
-                                       was here -->
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<title>Henrik Lau Eriksson</title>
 		<meta name="description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here">
@@ -80,6 +74,10 @@
 
 		</script>
 	</head>
+<!-- Welcome to
+┬ ┬┌─┐┌┐┌┬─┐┬┬┌─ ┬  ┌─┐┬ ┬┌─┐┬─┐┬┬┌─┌─┐┌─┐┌─┐┌┐┌ ┌─┐┌─┐┌┬┐
+├─┤├┤ │││├┬┘│├┴┐ │  ├─┤│ │├┤ ├┬┘│├┴┐└─┐└─┐│ ││││ │  │ ││││
+┴ ┴└─┘┘└┘┴└─┴┴ ┴o┴─┘┴ ┴└─┘└─┘┴└─┴┴ ┴└─┘└─┘└─┘┘└┘o└─┘└─┘┴ ┴ -->
 	<body>
 		<p>Hello, my name is</p>
 
@@ -87,7 +85,14 @@
 			<h1>Henrik Lau Eriksson</h1>
 
 			<div class="section">
-				<p>I live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, <a href="https://sweden.se">Sweden</a>, and I work as a developer at <a href="https://www.qliro.com">Qliro</a></p>
+				<p>I live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, <a href="https://sweden.se">Sweden</a></p>
+				
+				<p>I am a developer and work with:</p>
+				<ul>
+					<li>.NET / ASP.NET / C#</li>
+					<li>TDD / BDD / Specification by Example</li>
+					<li>Web / Cloud / Serverless</li>
+				</ul>
 
 				<p>You can contact me via <a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a> or <a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a>, encrypt via <a href="https://keybase.io/hlaueriksson">Keybase</a></p>
 			</div>
