--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 					<li>Web / Cloud / Serverless</li>
 				</ul>
 
+				<p>I studied computer science at <a href="https://www.kth.se/profile/heer/?l=en">KTH Royal Institute of Technology</a></p>
+
 				<p>You can contact me via <a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a> or <a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a>, encrypt via <a href="https://keybase.io/hlaueriksson">Keybase</a></p>
 			</div>
 
