--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<meta name="description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here">
 
 		<link rel="icon" sizes="192x192" href="icon.png">
-		<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<meta name="theme-color" content="#dcdcdc">
 
 		<!-- http://ogp.me/ -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://henrik.laueriksson.com" />
+		<meta property="og:url" content="https://henrik.laueriksson.com" />
 		<meta property="og:title" content="Henrik Lau Eriksson" />
 		<meta property="og:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
 		<meta property="og:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=1200" />
@@ -36,8 +36,8 @@
 		{
 			"@context": "http://schema.org",
 			"@type": "Blog",
-			"@id": "http://henrik.laueriksson.com",
-			"url": "http://henrik.laueriksson.com",
+			"@id": "https://henrik.laueriksson.com",
+			"url": "https://henrik.laueriksson.com",
 			"headline": "Henrik Lau Eriksson",
 			"description": "Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here",
 			"image": {
@@ -85,7 +85,7 @@
 			<h1>Henrik Lau Eriksson</h1>
 
 			<div class="section">
-				<p>I live in <a href="http://goo.gl/maps/IGnmY">Stockholm</a>, <a href="https://sweden.se">Sweden</a></p>
+				<p>I live in <a href="https://goo.gl/maps/covF4kkUiPC2">Stockholm</a>, <a href="https://sweden.se">Sweden</a></p>
 				
 				<p>I am a developer and work with:</p>
 				<ul>
@@ -104,7 +104,7 @@
 			</figure>
 
 			<div class="section">
-				<p>I blog over at <a href="http://conductofcode.io">Conduct of Code</a></p>
+				<p>I blog over at <a href="https://conductofcode.io">Conduct of Code</a></p>
 
 				<p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
 
@@ -118,8 +118,8 @@
 			<div class="section">
 				<!-- These aren't the profiles you're looking for;
 					<a href="https://www.facebook.com/henrik.laueriksson">Facebook</a>
-					<a href="https://google.com/+HenrikLauEriksson">Google+</a>
-					<a href="http://instagram.com/hlaueriksson">Instagram</a>
+					<a href="https://plus.google.com/+HenrikLauEriksson">Google+</a>
+					<a href="https://www.instagram.com/hlaueriksson">Instagram</a>
 				-->
 			</div>
 		</div>
