--- a/404.html
+++ b/404.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<!-- Oh Noes! -->
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 		<title>404 - Not Found</title>
+
 		<link rel="icon" sizes="192x192" href="icon.png">
-		<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		<meta charset="UTF-8" />
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 		<meta name="theme-color" content="#dcdcdc">
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,6 +23,7 @@
 
 		</script>
 	</head>
+<!-- Oh Noes! -->
 	<body>
 		<p>404</p>
 
@@ -28,7 +33,7 @@
 			<div class="section">
 				<p>Sorry, but the page/file you were trying to view does not exist.</p>
 
-				<p>Take me back to <a href="http://henrik.laueriksson.com/" title="Henrik Lau Eriksson">henrik.laueriksson.com</a></p>
+				<p>Take me back to <a href="https://henrik.laueriksson.com" title="Henrik Lau Eriksson">henrik.laueriksson.com</a></p>
 			</div>
 
 			<figure>
