--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 			<div class="section">
 				<!-- These aren't the profiles you're looking for;
-					<a href="https://www.facebook.com/henrik.laueriksson">Facebook</a>
+					<a href="https://www.facebook.com/henriklaueriksson">Facebook</a>
 					<a href="https://plus.google.com/+HenrikLauEriksson">Google+</a>
 					<a href="https://www.instagram.com/hlaueriksson">Instagram</a>
 				-->
