QR codes with title and icon

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Henrik Lau Eriksson</title>
+		<title>Contact 📲 Henrik Lau Eriksson</title>
 		<meta name="description" content="Scan the QR code to view the contact details of Henrik Lau Eriksson">
 
-		<link rel="icon" sizes="192x192" href="../icon.png">
+		<link rel="icon" sizes="192x192" href="https://ssl.gstatic.com/images/branding/product/2x/contacts_96dp.png">
 		<meta name="theme-color" content="#dcdcdc">
 
 		<meta name="robots" content="noindex, nofollow">
