--- a/linkedin/index.html
+++ b/linkedin/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Henrik Lau Eriksson</title>
+		<title>LinkedIn 📲 Henrik Lau Eriksson</title>
 		<meta name="description" content="Scan the QR code to view the LinkedIn profile of Henrik Lau Eriksson">
 
-		<link rel="icon" sizes="192x192" href="../icon.png">
+		<link rel="icon" href="https://static.licdn.com/scds/common/u/images/logos/favicons/v1/favicon.ico">
 		<meta name="theme-color" content="#dcdcdc">
 
 		<meta name="robots" content="noindex, nofollow">
