--- a/twitter/index.html
+++ b/twitter/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Henrik Lau Eriksson</title>
+		<title>Twitter 📲 Henrik Lau Eriksson</title>
 		<meta name="description" content="Scan the QR code to view the Twitter profile of Henrik Lau Eriksson">
 
-		<link rel="icon" sizes="192x192" href="../icon.png">
+		<link rel="icon" sizes="192x192" href="https://abs.twimg.com/icons/apple-touch-icon-192x192.png">
 		<meta name="theme-color" content="#dcdcdc">
 
 		<meta name="robots" content="noindex, nofollow">
