--- a/qr/index.html
+++ b/qr/index.html
@@ -7,7 +7,7 @@
 		<title>Henrik Lau Eriksson 📲</title>
 		<meta name="description" content="Scan the QR code to get the URL of this site">
 
-		<link rel="icon" sizes="192x192" href="icon.png">
+		<link rel="icon" sizes="192x192" href="../icon.png">
 		<meta name="theme-color" content="#dcdcdc">
 
 		<meta name="robots" content="noindex, nofollow">
