--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
 				
 				<p>I am a developer and work with:</p>
 				<ul>
-					<li>.NET / ASP.NET / C#</li>
-					<li>TDD / BDD / Specification by Example</li>
-					<li>Web / Cloud / Serverless</li>
+					<li>.NET / ASP.NET / C# ⚙️</li>
+					<li>The Web 🌐
+						<ul>
+							<li>Usually backend 🐴</li>
+							<li>Sometimes frontend 🦄</li>
+						</ul>
+					</li>
+					<li>Payments 💳</li>
 				</ul>
 
 				<p>I studied computer science at <a href="https://www.kth.se/profile/heer/?l=en">KTH Royal Institute of Technology</a></p>
