--- a/404.html
+++ b/404.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html lang="en">
 
-		<title>404 - Not Found</title>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39767110-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-		<link rel="icon" sizes="192x192" href="icon.png">
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css">
+    gtag('config', 'UA-39767110-4');
+  </script>
 
-		<meta name="theme-color" content="#dcdcdc">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <title>404 - Not Found</title>
 
-		  ga('create', 'UA-39767110-4', 'auto');
-		  ga('send', 'pageview');
+  <link rel="icon" sizes="192x192" href="icon.png">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-		</script>
-	</head>
-<!-- Oh Noes! -->
-	<body>
-		<p>404</p>
+  <meta name="theme-color" content="#dcdcdc">
+</head>
+<body>
+  <p>404</p>
 
-		<div class="content">
-			<h1>Not Found</h1>
+  <div class="content">
+    <h1>Not Found</h1>
 
-			<div class="section">
-				<p>Sorry, but the page/file you were trying to view does not exist.</p>
+    <div class="section">
+      <p>Sorry, but the page/file you were trying to view does not exist.</p>
 
-				<p>Take me back to <a href="https://henrik.laueriksson.com" title="Henrik Lau Eriksson">henrik.laueriksson.com</a></p>
-			</div>
+      <p>Take me back to <a href="https://henrik.laueriksson.com" title="Henrik Lau Eriksson">henrik.laueriksson.com</a></p>
+    </div>
 
-			<figure>
-				<img src="404.jpeg" alt="Henrik Lau Eriksson" />
-			</figure>
+    <figure>
+      <img src="404.jpeg" alt="Henrik Lau Eriksson" />
+    </figure>
 
-			<div class="section">
-				<p>Do you think that the page/file should exist?</p>
+    <div class="section">
+      <p>Do you think that the page/file should exist?</p>
 
-				<p>Fork the repo on <a href="https://github.com/hlaueriksson/henrik.laueriksson.com">GitHub</a> and send me a Pull Request.</p>
-			</div>
-		</div>
-	</body>
+      <p>Fork the repo on <a href="https://github.com/hlaueriksson/henrik.laueriksson.com">GitHub</a> and send me a Pull Request.</p>
+    </div>
+  </div>
+</body>
+
 </html>
