--- a/index.html
+++ b/index.html
@@ -1,132 +1,136 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html lang="en">
 
-		<title>Henrik Lau Eriksson</title>
-		<meta name="description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here">
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39767110-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-		<link rel="icon" sizes="192x192" href="icon.png">
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css">
+    gtag('config', 'UA-39767110-4');
+  </script>
 
-		<meta name="theme-color" content="#dcdcdc">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!-- http://ogp.me/ -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://henrik.laueriksson.com" />
-		<meta property="og:title" content="Henrik Lau Eriksson" />
-		<meta property="og:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
-		<meta property="og:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=1200" />
-		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="1200" />
+  <title>Henrik Lau Eriksson</title>
+  <meta name="description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here">
 
-		<!-- https://dev.twitter.com/cards/overview -->
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@hlaueriksson" />
-		<meta name="twitter:creator" content="@hlaueriksson" />
-		<meta name="twitter:title" content="Henrik Lau Eriksson" />
-		<meta name="twitter:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
-		<meta name="twitter:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
+  <link rel="icon" sizes="192x192" href="icon.png">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-		<!-- http://schema.org/ -->
-		<script type="application/ld+json">
-		{
-			"@context": "http://schema.org",
-			"@type": "Blog",
-			"@id": "https://henrik.laueriksson.com",
-			"url": "https://henrik.laueriksson.com",
-			"headline": "Henrik Lau Eriksson",
-			"description": "Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here",
-			"image": {
-				"@type": "ImageObject",
-				"url": "https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700",
-				"height": 700,
-				"width": 700
-			},
-			"author": {
-				"@type": "Person",
-				"name": "Henrik Lau Eriksson"
-			},
-			"publisher": {
-				"@type": "Organization",
-				"name": "Henrik Lau Eriksson",
-				"logo": {
-					"@type": "ImageObject",
-					"url": "https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=60",
-					"width": 60,
-					"height": 60
-				}
-			}
-		}
-		</script>
+  <meta name="theme-color" content="#dcdcdc">
 
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!-- http://ogp.me/ -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://henrik.laueriksson.com" />
+  <meta property="og:title" content="Henrik Lau Eriksson" />
+  <meta property="og:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
+  <meta property="og:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=1200" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="1200" />
 
-		  ga('create', 'UA-39767110-4', 'auto');
-		  ga('send', 'pageview');
+  <!-- https://dev.twitter.com/cards/overview -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@hlaueriksson" />
+  <meta name="twitter:creator" content="@hlaueriksson" />
+  <meta name="twitter:title" content="Henrik Lau Eriksson" />
+  <meta name="twitter:description" content="Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here" />
+  <meta name="twitter:image" content="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700" />
 
-		</script>
-	</head>
-<!-- Welcome to
-┬ ┬┌─┐┌┐┌┬─┐┬┬┌─ ┬  ┌─┐┬ ┬┌─┐┬─┐┬┬┌─┌─┐┌─┐┌─┐┌┐┌ ┌─┐┌─┐┌┬┐
-├─┤├┤ │││├┬┘│├┴┐ │  ├─┤│ │├┤ ├┬┘│├┴┐└─┐└─┐│ ││││ │  │ ││││
-┴ ┴└─┘┘└┘┴└─┴┴ ┴o┴─┘┴ ┴└─┘└─┘┴└─┴┴ ┴└─┘└─┘└─┘┘└┘o└─┘└─┘┴ ┴ -->
-	<body>
-		<p>Hello, my name is</p>
+  <!-- http://schema.org/ -->
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Blog",
+    "@id": "https://henrik.laueriksson.com",
+    "url": "https://henrik.laueriksson.com",
+    "headline": "Henrik Lau Eriksson",
+    "description": "Henrik Lau Eriksson is a software developer from Stockholm, Sweden, and you can find his contact information here",
+    "image": {
+      "@type": "ImageObject",
+      "url": "https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=700",
+      "height": 700,
+      "width": 700
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Henrik Lau Eriksson"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Henrik Lau Eriksson",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=60",
+        "width": 60,
+        "height": 60
+      }
+    }
+  }
+  </script>
+</head>
+<body>
+  <p>Hello, my name is</p>
 
-		<div class="content">
-			<h1>Henrik Lau Eriksson</h1>
+  <div class="content">
+    <h1>Henrik Lau Eriksson</h1>
 
-			<div class="section">
-				<p>I live in <a href="https://goo.gl/maps/covF4kkUiPC2">Stockholm</a>, <a href="https://sweden.se">Sweden</a></p>
-				
-				<p>I am a developer and work with:</p>
-				<ul>
-					<li>.NET / ASP.NET / C# ⚙️</li>
-					<li>The Web 🌐
-						<ul>
-							<li>Usually backend 🐴</li>
-							<li>Sometimes frontend 🦄</li>
-						</ul>
-					</li>
-					<li>Payments 💳</li>
-				</ul>
+    <div class="section">
+      <p>I live in <a href="https://goo.gl/maps/covF4kkUiPC2">Stockholm</a>, <a href="https://sweden.se">Sweden</a></p>
 
-				<p>I studied computer science at <a href="https://www.kth.se/profile/heer/?l=en">KTH Royal Institute of Technology</a></p>
+      <p>I am a developer and I work with:</p>
+      <ul>
+        <li>.NET / ASP.NET / C# ⚙️</li>
+        <li>The Web 🌐
+          <ul>
+            <li>Usually backend 🐴</li>
+            <li>Sometimes frontend 🦄</li>
+          </ul>
+        </li>
+        <li>Payments 💳</li>
+      </ul>
 
-				<p>You can contact me via <a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a> or <a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a>, encrypt via <a href="https://keybase.io/hlaueriksson">Keybase</a></p>
-			</div>
+      <p>I studied computer science at <a href="https://www.kth.se/profile/heer/?l=en">KTH Royal Institute of Technology</a></p>
 
-			<figure>
-				<img src="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=160" alt="Henrik Lau Eriksson" />
-			</figure>
+      <p>You can contact me via:</p>
+      <ul>
+        <li><a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a></li>
+        <li><a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a></li>
+        <li><a href="https://www.linkedin.com/in/henriklaueriksson">LinkedIn</a></li>
+        <li><a href="tel:+46729776981">+46729776981</a></li>
+      </ul>
+    </div>
 
-			<div class="section">
-				<p>I blog over at <a href="https://conductofcode.io">Conduct of Code</a></p>
+    <figure>
+      <img src="https://s.gravatar.com/avatar/27df7a0a062537ef9116a1572707d5e0?s=320" alt="Henrik Lau Eriksson" />
+    </figure>
 
-				<p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
+    <div class="section">
+      <p>I blog over at <a href="https://conductofcode.io">Conduct of Code</a></p>
 
-				<p>You can find my profile on <a href="https://www.linkedin.com/in/henriklaueriksson">LinkedIn</a></p>
-			</div>
+      <p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
 
-			<div class="section">
-				<p><a href="/cv/">cv</a> | <a href="/latest/">latest</a></p>
-			</div>
+      <p>I distribute some of my open source projects via <a href="https://www.nuget.org/profiles/hlaueriksson">NuGet</a></p>
+    </div>
 
-			<div class="section">
-				<!-- These aren't the profiles you're looking for;
-					<a href="https://www.facebook.com/henriklaueriksson">Facebook</a>
-					<a href="https://plus.google.com/+HenrikLauEriksson">Google+</a>
-					<a href="https://www.instagram.com/hlaueriksson">Instagram</a>
-				-->
-			</div>
-		</div>
-	</body>
+    <div class="section">
+      <p><a href="/cv/">cv</a> | <a href="/latest/">latest</a></p>
+    </div>
+
+    <div class="section">
+      <!-- These aren't the profiles you're looking for;
+        <a href="https://www.facebook.com/henriklaueriksson">Facebook</a>
+        <a href="https://www.instagram.com/hlaueriksson">Instagram</a>
+        <a href="https://stackoverflow.com/story/hlaueriksson">Stack Overflow</a>
+        <a href="https://www.tradera.com/en/profile/items/3500804/hlaueriksson">Tradera</a>
+      -->
+    </div>
+  </div>
+</body>
+
 </html>
