--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,7 @@
-<!doctype html><html lang="sv-se"><head><meta charset="utf-8"><title>CV</title><base href="/cv/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" sizes="192x192" href="icon.png"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!doctype html><html lang="sv-se"><head><meta charset="utf-8"><title>CV - Henrik Lau Eriksson</title><base href="/cv/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" sizes="192x192" href="icon.png"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-39767110-4', 'auto');
-    ga('send', 'pageview');</script><link href="styles.cd5b9c3736057130e8e1.bundle.css" rel="stylesheet"/></head><body><app-root>Loading...</app-root><script type="text/javascript" src="inline.33a853d0ad584b221907.bundle.js"></script><script type="text/javascript" src="polyfills.556bc52c0382051e18b8.bundle.js"></script><script type="text/javascript" src="vendor.10afa60f43cbba20ae1b.bundle.js"></script><script type="text/javascript" src="main.f6377c2527d471ec2910.bundle.js"></script></body></html>
+    ga('send', 'pageview');</script><link href="styles.cd5b9c3736057130e8e1.bundle.css" rel="stylesheet"/></head><body><app-root>Loading...</app-root><script type="text/javascript" src="inline.23742c8ee026ff81aa19.bundle.js"></script><script type="text/javascript" src="polyfills.7359efebf894365e0633.bundle.js"></script><script type="text/javascript" src="vendor.10afa60f43cbba20ae1b.bundle.js"></script><script type="text/javascript" src="main.872999dd70f1ea0097ce.bundle.js"></script></body></html>
