--- a/index.html
+++ b/index.html
@@ -116,16 +116,13 @@
       <p>I have some code on <a href="https://github.com/hlaueriksson">GitHub</a></p>
 
       <p>I distribute some of my open source projects via <a href="https://www.nuget.org/profiles/hlaueriksson">NuGet</a></p>
-    </div>
 
-    <div class="section">
-      <p><a href="/cv/">cv</a> | <a href="/latest/">latest</a></p>
+      <p>These are a few of my favorite things: <a href="https://www.instagram.com/hlaueriksson">Hong Kong</a>, <a href="https://tintin.laueriksson.com/">Cats</a></p>
     </div>
 
     <div class="section">
       <!-- These aren't the profiles you're looking for;
         <a href="https://www.facebook.com/henriklaueriksson">Facebook</a>
-        <a href="https://www.instagram.com/hlaueriksson">Instagram</a>
         <a href="https://stackoverflow.com/story/hlaueriksson">Stack Overflow</a>
         <a href="https://www.tradera.com/en/profile/items/3500804/hlaueriksson">Tradera</a>
       -->
