--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
   </script>
 </head>
 <body>
-  <p>Hello, my name is</p>
+  <p>Hej 👋, my name is</p>
 
   <div class="content">
-    <h1>Henrik Lau Eriksson</h1>
+    <h1>Henrik Lau Eriksson 👨‍🦰</h1>
 
     <div class="section">
-      <p>I live in <a href="https://goo.gl/maps/covF4kkUiPC2">Stockholm</a>, <a href="https://sweden.se">Sweden</a></p>
+      <p>I live in <a href="https://www.visitstockholm.com">Stockholm</a>, <a href="https://sweden.se">Sweden</a> <a href="https://goo.gl/maps/covF4kkUiPC2">📌</a></p>
 
-      <p>I am a developer and I work with:</p>
+      <p>I am a <i>freelance</i> software developer and I work with:</p>
       <ul>
         <li>.NET / ASP.NET / C# ⚙️</li>
         <li>The Web 🌐
@@ -98,11 +98,30 @@
       <p>I studied computer science at <a href="https://www.kth.se/profile/heer/?l=en">KTH Royal Institute of Technology</a></p>
 
       <p>You can contact me via:</p>
-      <ul>
-        <li><a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a></li>
-        <li><a href="https://twitter.com/hlaueriksson"><span class="at">@</span>hlaueriksson</a></li>
-        <li><a href="https://www.linkedin.com/in/henriklaueriksson">LinkedIn</a></li>
-        <li><a href="tel:+46729776981">+46729776981</a></li>
+      <ul class="contact">
+        <li>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+          </svg>
+          <a href="mailto:henrik@laueriksson.com">henrik<span class="at">@</span>laueriksson.com</a>
+        </li>
+        <li>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+            <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+          </svg>
+          <a href="tel:+46729776981">+46729776981</a>
+        </li>
+        <li>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+          </svg>
+          <a href="https://www.linkedin.com/in/henriklaueriksson">in/henriklaueriksson</a></li>
+        <li>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+            <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+          </svg>
+          <a href="https://twitter.com/hlaueriksson">@hlaueriksson</a>
+        </li>
       </ul>
     </div>
 
@@ -117,7 +136,7 @@
 
       <p>I distribute some of my open source projects via <a href="https://www.nuget.org/profiles/hlaueriksson">NuGet</a></p>
 
-      <p>These are a few of my favorite things: <a href="https://www.instagram.com/hlaueriksson">Hong Kong</a>, <a href="https://tintin.laueriksson.com/">Cats</a></p>
+      <p>These are a few of my favorite things: <a href="https://www.instagram.com/hlaueriksson">Hong Kong</a> <i>of old</i>, <a href="https://tintin.laueriksson.com">Cats</a>, <a href="https://github.com/hlaueriksson/github-emoji">Emoji</a></p>
     </div>
 
     <div class="section">
